--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 server.port=8888
 test.hello=hello3
+
+#增加数据库连接
+spring.datasource.url=jdbc:mysql://localhost:3306/wiki?characterEncoding=utf8&autoReconnect=true&useSSL=false\
+  &serverTimezone=Asia/Shanghai
+spring.datasource.username=wiki
+spring.datasource.password=wxhtobe1
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
