--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 配置mybatis所有Mapper.xml所在的路径
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
+
+#打印所有的SQL日志：SQL，参数，结果(trace 最低等级）
+logging.level.com.wxh.wiki.mapper=trace
