--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
 #打印所有的SQL日志：SQL，参数，结果(trace 最低等级）
 logging.level.com.wxh.wiki.mapper=trace
+
+# redis配置
+spring.redis.host=r-uf6ljbcdaxobsifyctpd.redis.rds.aliyuncs.com
+spring.redis.port=6379
+spring.redis.database=10
+spring.redis.password=Redis000
