11-5 增加定时任务，定时收集数据 要在xml里一次执行多个SQL的话，需要为数据库连接增加参数：allowMultiQueries=true

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ test.hello=hello3
 
 #增加数据库连接
 spring.datasource.url=jdbc:mysql://localhost:3306/wiki?characterEncoding=utf8&autoReconnect=true&useSSL=false\
-  &serverTimezone=Asia/Shanghai
+  &serverTimezone=Asia/Shanghai&allowMultiQueries=true
 spring.datasource.username=wiki
 spring.datasource.password=wxhtobe1
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
