--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
     </dependencies>
 
     <build>
+        <finalName>/dist/${artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
