--- a/web/.env.prod
+++ b/web/.env.prod
@@ -1,3 +1,3 @@
 NODE_ENV=production
-VUE_APP_SERVER=http://server.wxh.com
-VUE_APP_WS_SERVER=ws://server.imooc.com
+VUE_APP_SERVER= http://121.5.224.194:8888
+VUE_APP_WS_SERVER=ws://121.5.224.194:8888
