代理时长设置600秒，默认60秒，websocket超时会自动断开

--- a/doc/deploy/server.conf
+++ b/doc/deploy/server.conf
@@ -1,6 +1,8 @@
 server{
+  listen 80;
+
   location / {
-    proxy_pass http://localhost:8888;
+    proxy_pass http://localhost:8880;
 
     # 针对websocket，需要增加下面的配置
     proxy_redirect off;
@@ -10,6 +12,8 @@ server{
     proxy_set_header Host $host:$server_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  }
 
+    # 代理时长设置600秒，默认60秒，websocket超时会自动断开
+    proxy_read_timeout 600s;
+  }
 }
